API GATEWAY + KEYKLOAK FIXES + LOGIN/SIGNUP/LOGOUT frontend

--- a/backEnd/KeyCloak/src/main/resources/application.properties
+++ b/backEnd/KeyCloak/src/main/resources/application.properties
@@ -5,17 +5,18 @@ server.port=8079
 eureka.client.service-url.defaultZone=http://localhost:8420/eureka
 eureka.client.register-with-eureka=true
 
-# Keycloak server (run Keycloak separately - see README; default dev port is 8421)
-keycloak.auth-server-url=http://localhost:8421
+# Keycloak server (run Keycloak separately - see README; must be Keycloak's URL, not this service's port)
+keycloak.auth-server-url=http://localhost:8080
 keycloak.realm=smart-freelance
 keycloak.resource=smart-freelance-backend
-keycloak.credentials.secret=${KEYCLOAK_CLIENT_SECRET:}
+keycloak.credentials.secret=PpZuiHLBeLfl3xsxaQsmBDjT9nYgfoJE
 
-# Keycloak Admin API (for user registration)
+# Keycloak Admin API (for user registration). If admin-cli has "Client authentication" ON, set client-secret.
 keycloak.admin.realm=master
 keycloak.admin.client-id=admin-cli
-keycloak.admin.username=admin
-keycloak.admin.password=${KEYCLOAK_ADMIN_PASSWORD:admin}
+keycloak.admin.client-secret=Vpa9TwXFx82VRyID7xTYsn6w8dhkNSE6
+keycloak.admin.username=Endless404
+keycloak.admin.password=Ridha404
 
 # OAuth2 Resource Server: validate JWT from Keycloak
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.auth-server-url}/realms/${keycloak.realm}
