--- a/backEnd/KeyCloak/pom.xml
+++ b/backEnd/KeyCloak/pom.xml
@@ -49,6 +49,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!-- LoadBalancer for RestTemplate service-name resolution -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
 
         <!-- Keycloak Admin REST API client -->
         <dependency>
