--- a/backEnd/Microservices/user/src/main/resources/application.properties
+++ b/backEnd/Microservices/user/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=user
-server.port=8085
+server.port=8090
 eureka.client.service-url.defaultZone=http://localhost:8420/eureka
 eureka.client.register-with-eureka=true
 
-# Use dev profile when MySQL is not running: spring.profiles.active=dev (in-memory H2)
-# MySQL (default)
-spring.datasource.url=jdbc:mysql://localhost:3307/userdb?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/userdb?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
