--- a/backEnd/Microservices/Offer/src/main/resources/application.properties
+++ b/backEnd/Microservices/Offer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=Offer
+# Application Name
+spring.application.name=OFFER
 server.port=8082
 
 # Eureka Client Configuration
@@ -6,22 +7,56 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8420/eureka/
 eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+eureka.instance.lease-renewal-interval-in-seconds=30
+eureka.instance.lease-expiration-duration-in-seconds=90
 
-# Configuration MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/gestion_offre_db?createDatabaseIfNotExist=true
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_offre_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuration JPA/Hibernate (CORRIGÉ pour Hibernate 7.x)
-spring.jpa.hibernate.ddl-auto=create-drop
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
 
+# Keycloak Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8079/realms/freelance-platform
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8079/realms/freelance-platform/protocol/openid-connect/certs
+
+# Feign Client Configuration
+feign.client.config.default.connectTimeout=5000
+feign.client.config.default.readTimeout=5000
+feign.client.config.default.loggerLevel=full
+
+# URLs des autres services (optionnel, utilisé en fallback si Eureka est down)
+service.user.url=http://localhost:8080
+service.planning.url=http://localhost:8081
+service.project.url=http://localhost:8084
+
+# Circuit Breaker (Resilience4j)
+resilience4j.circuitbreaker.instances.userService.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.userService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.userService.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.userService.permittedNumberOfCallsInHalfOpenState=3
+
+resilience4j.circuitbreaker.instances.projectService.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.projectService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.projectService.waitDurationInOpenState=10000
+
+resilience4j.circuitbreaker.instances.planningService.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.planningService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.planningService.waitDurationInOpenState=10000
+
+# Retry Configuration
+resilience4j.retry.instances.userService.maxAttempts=3
+resilience4j.retry.instances.userService.waitDuration=1000
+
 # Logging
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.example=DEBUG
+logging.level.org.springframework.cloud.openfeign=DEBUG
+logging.level.com.netflix.discovery=INFO
