--- a/backEnd/Microservices/planning/src/main/resources/application.properties
+++ b/backEnd/Microservices/planning/src/main/resources/application.properties
@@ -3,14 +3,15 @@ server.port=8081
 eureka.client.service-url.defaultZone=http://localhost:8420/eureka
 eureka.client.register-with-eureka=true
 
-# MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/planningdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+# MySQL Database (requires MySQL running on localhost:3306)
+spring.datasource.url=jdbc:mysql://localhost:3306/planningdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&connectTimeout=15000&socketTimeout=15000
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
